--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -1,13 +1,62 @@
+
 @font-face {
-    font-family: 'OpenSans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans/OpenSans-Italic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans/OpenSans-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans/OpenSans-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Georgia';
+  src: url('../fonts/Georgia/Georgia-BoldItalic.eot');
+  src: local('Georgia Bold Italic'), local('Georgia-BoldItalic'),
+  url('../fonts/Georgia/Georgia-BoldItalic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Georgia/Georgia-BoldItalic.woff') format('woff'),
+  url('../fonts/Georgia/Georgia-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
 }
 
 @font-face {
-    font-family: 'OpenSans';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+  font-family: 'Georgia';
+  src: url('../fonts/Georgia/Georgia-Italic.eot');
+  src: local('Georgia Italic'), local('Georgia-Italic'),
+  url('../fonts/Georgia/Georgia-Italic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Georgia/Georgia-Italic.woff') format('woff'),
+  url('../fonts/Georgia/Georgia-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Georgia';
+  src: url('../fonts/Georgia/Georgia-Bold.eot');
+  src: local('Georgia Bold'), local('Georgia-Bold'),
+  url('../fonts/Georgia/Georgia-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Georgia/Georgia-Bold.woff') format('woff'),
+  url('../fonts/Georgia/Georgia-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Georgia';
+  src: url('../fonts/Georgia/Georgia.eot');
+  src: local('Georgia'),
+  url('../fonts/Georgia/Georgia.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Georgia/Georgia.woff') format('woff'),
+  url('../fonts/Georgia/Georgia.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
