--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -1,9 +1,14 @@
-
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/Open_Sans/static/OpenSans/OpenSans-Italic.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
+}
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
