--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -65,7 +65,7 @@
 $screen-xs: 479px;
 $screen-sm: 767px;
 $screen-md: 991px;
-$screen-lg: 1200px;
+$screen-lg: 1200px; /**/
 $screen-xl: 1600px;
 
 /* Create the mixin (usually in a separate .scss file) */
