--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1146,6 +1146,7 @@ body {
 .button-inst-description {
     display: flex;
     align-items: center;
+    color: #ffffff;
 }
 /*block-inst-end*/
 /*footer*/
@@ -1312,7 +1313,6 @@ body {
     }
 }
 /*footer end*/
-
 
 /*modal-window*/
 .modal {
@@ -1594,4 +1594,179 @@ body {
     cursor: pointer;
 }
 /*modal-window-end*/
+
+/*burger-menu*/
+.burger {
+    &-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+    &-wrapper {
+        position: fixed;
+        z-index: -1;
+        opacity: 0;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        transition: all 0.5s;
+    }
+    &-box {
+        width: 375px;
+        background-color: #F5F5F5;
+        padding: 12px 15px 42px;
+        position: relative;
+        z-index: 5;
+        left: -375px;
+        transition: left 0.5s;
+        height: 100vh;
+        overflow-y: scroll;
+    }
+    &-title {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+    }
+    &-close {
+        &-button {
+            border: none;
+            background-color: transparent;
+        }
+    }
+    &-menu {
+        &-main-wrapper {
+            padding-top: 55px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .phone {
+                &-wrapper {
+                    @include max-screen(sm) {
+                        display: block;
+                        margin-bottom: 36px;
+                        text-align: center;
+                    }
+                }
+                &-text {
+                    font-size: 18px;
+                    line-height: 22px;
+                    background: none;
+                    -webkit-text-fill-color: #A18A6F;
+                    margin-top: 0;
+                }
+            }
+            .footer-icons-wrapper {
+                width: 248px;
+                margin: 0 auto;
+            }
+        }
+        &-content {
+            list-style: none;
+            li {
+                padding-bottom: 40px;
+                text-align: center;
+                &:last-child {
+                    padding-bottom: 0;
+                }
+            }
+            a {
+                font-size: 14px;
+                line-height: 17px;
+                text-align: center;
+                color: #252525;
+                &:visited {
+                    color: #252525;
+                }
+            }
+        }
+        &-bottom-content {
+            margin-top: 132px;
+        }
+
+        //&-more {
+        //    &-title {
+        //        font-weight: 600;
+        //        font-size: 24px;
+        //        line-height: 29px;
+        //        text-transform: uppercase;
+        //        color: #F87C3C;
+        //        padding-top: 47px;
+        //        padding-bottom: 19px;
+        //    }
+        //    &-wrapper {
+        //        display: none;
+        //        padding-top: 47px;
+        //        .button-back {
+        //            display: flex;
+        //
+        //            &-content {
+        //                display: block;
+        //                padding-left: 14px;
+        //                font-weight: 600;
+        //                font-size: 14px;
+        //                line-height: 17px;
+        //                text-transform: uppercase;
+        //                color: #D5642A;
+        //            }
+        //        }
+        //        .burger-menu-content {
+        //            a {
+        //                color: #FFFFFF;
+        //                padding-top: 28px;
+        //                padding-bottom: 28px;
+        //                border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        //                &:visited {
+        //                    color: #FFFFFF;
+        //                }
+        //                &:last-child {
+        //                    border-bottom: none;
+        //                }
+        //            }
+        //        }
+        //    }
+        //}
+    }
+    &-visible {
+        z-index: 2000;
+        opacity: 1;
+        .burger-box {
+            left: 0;
+        }
+    }
+    &-visible-block {
+        display: block;
+    }
+    &-hidden {
+        display: none;
+    }
+    &-img {
+        width: 40px;
+        height: 24px;
+    }
+    &-button-wrapper {
+        display: none;
+        @include max-screen(sm) {
+            display: block;
+            margin-top: 7px;
+        }
+    }
+    &-button {
+        border: none;
+        background-color: transparent;
+    }
+    &-logo {
+        width: 165px;
+        height: 43px;
+    }
+}
+
+/*burger-menu-end*/
+
+
 
